# FDMSk-Smoluchowski

./: .gitignore  ANALYSIS.md  CMakeLists.txt  LICENSE  OPTIMIZATION_STORY_MONTECARLO.md  README.md  TODO.md  main.cpp  python_var.hpp  python_var_old.hpp
src/: bench.cpp  config.hpp  main.cpp  smoluchowski.hpp
sweeps/: bench.sh  mb_sweep.sbatch  mc_compare.py  mem_lever.sbatch  mem_probe.sbatch  memtrace.c  nj_integ.sbatch  peak_mem.sbatch  ref_compare.py  run_ballistic.sbatch  run_t1e7.sbatch  run_t1e7_cfg.sbatch  sweep_body.sh  sweep_large.sbatch  sweep_scaling.sbatch  t1e6_grid.sbatch  to_sizeconc.py  verify.py  verify_t1e6.sbatch
sweeps/bench/golden/: atmos_t100.txt  atmos_t1000.txt  bal_t10.txt
